--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,53 @@
 body{
+    font-family: 'Arial', "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
     background-image: url("../../assets/images/qbkls.png");
     background-repeat: repeat;
 }
 
-nav{
-    position:fixed;
-    display:block;
-    float: left;
-    height: 90px;
-    right: 0;
-    left: 0;
-    top: 0;
-    background-color: #ffffff;
-    box-shadow: 1px 3px 3px #cccccc;
-    z-index: 1;
-    overflow:hidden;
+* {
+    box-sizing: border-box;
 }
 
-.about{
-    position: relative;
-}
+/* general */
 
-.aboutMe{
+.container{
+    width: 100%;
+    max-width: 960px;  
+    margin: 0 auto;
     clear: both;
-    float: left;
-    width: 890px;
-    line-height:30px;
-    margin:auto;
-    margin-bottom: 30px;
-    margin-left: 35px;
 }
 
-.aboutMe p{
-    margin-top: 25px;
+h1,
+h2,
+h3,
+p {
+    margin-bottom: 20px;
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
+
+h1,
+h2,
+h3 {
+    font-family: Georgia, Times, "Times New Roman", serif;
+    color: #4aaaa5;
+}
+
+h1 {
+    padding-bottom: 20px;
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 1px solid #dddddd;
+}
+
+h2,
+h3 {
+    font-size: 22px;
 }
 
 .clearfix::after {
@@ -41,75 +56,150 @@ nav{
     clear: both;
 }
 
-.clinks{
-    float: right;
+/* header */
+#m-head {
+    position:fixed;
+    width: 100%;
+    height: 90px;
+    margin: 0 0 30px;
+    background: #ffffff;
+    box-shadow: 1px 3px 3px #cccccc;
+    z-index: 99;
+    overflow:auto;
+}
+
+
+#logo{
+    float: left;
+    width: 250px;
+    height: 90px;
+    color: #ffffff;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 30px;
     line-height: 90px;
-    width: 230;
-    z-index: 2;
-    height: 90px;
+    background-color: #4aaaa5;
+    text-align: center;
+    text-decoration: none;
 }
 
-.clinks a{
-    position: relative;
-    background-color: white;
-    height: 90px;
-    padding: 36px 15px 37px 15px;
-    transition: .2s;
+nav{
+   float: right;
 }
 
-.clinks a:hover {
+nav a {
+    display: inline-block;
+    padding: 27px 15px;
+    line-height: 45px;
+    color: #999;
+    box-shadow: 1px solid #efefef;
+    transition: 0.2s;
+}
+
+nav a:first-child {
+    border-left: 0 none;
+}
+
+nav a:hover{
     background-color: #dfdfdf;
 }
 
-.container{
+/* footer */
+
+footer{
+    padding: 30px 0;
     clear: both;
-    float: middle;
-    margin: 120px auto 120px auto;
-    background-color: #ffffff;
-    border: 1px solid #dddddd;  
-    width: 960px;
-    overflow: hidden;
+    font-size: 12px;
+    color: #fff;
+    color: #ccc;
+    text-align: center;
+    background: #666;
+    box-shadow: 1px 3px 3px #efefef;
+    border-top: 2px solid #4aaaa5;
+    height: 50px;
+    line-height: 1px;;
 }
 
-.fclass{
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777;
+h3, h2 {
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    line-height: 22px;
+    border-bottom: 2px solid #eee;
 }
 
-.hclass{
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
-    font-size: 30px;
+/* main */
+
+#main-container {
+    padding-top: 130px;
+    min-height: calc(100vh - 70px)
+}
+
+.main-section{
+    float: left;
+    width: 100%;
+    max-width: 960px;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #fff;
+    border: 1px solid #ddd;
+}
+
+
+/* portfolio img */
+
+/* .work {
     position: relative;
-    float:left;
-    height: 60px;
-    width: 900px;
-    margin-bottom: 60px;
-    border-bottom: 1px solid #dddddd;
-    top: 35px;
-    left: 35px;
-    color: #4aaaa5;
+    float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
 }
 
-.hclass:hover{
-    color: #4aaaa5;
+.work:nth-child(even){
+    margin-right: 40px;
 }
 
-.navContainer{
-    width: 960px;
-    margin: auto;
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
 }
+
+.work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #fff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+} */
+
+.self {
+    float: left;
+    max-width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+}
+
 .grid-container{
+    max-width: 890px;
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: 890px;
+    grid-template-columns: 100%;
     float: left;
 }
 
 .grid-container img{
     float: left;
-    margin: 35px;
+    margin-bottom: 35px;
     margin-top: 0;
     max-width: 890px;
+    width: 100%;
 }
 
 .box{
@@ -123,12 +213,11 @@ nav{
     color: white;
     position: absolute;
     bottom: 35px;
-    left: 35px;
     text-align: center;
     line-height: 70px;
     background-color: black;
-    width: 92.70833333333333%;
-    height: 70px;
+    width: 100%;
+    height: auto;
     overflow: hidden;
     visibility: hidden;
     opacity: 0;
@@ -140,15 +229,7 @@ nav{
     opacity: 0.7;
 }
 
-.footer{
-    height: 50px;
-    margin-top: -50px;
-}
-
-*{
-    box-sizing: border-box;
-}
-
+/* contact */
 input[type=text], select, textarea{
     width: 100%;
     padding: 12px;
@@ -184,67 +265,57 @@ input[type=submit]:hover{
     clear: both;
 }
 
-a:link, a:visited, a:hover, a:active{
-    text-decoration: none;
-    color:  #777777;
-}
-
-#logo{
-    position: relative;
-    float: left;
-    top: 0;
-    left:0;
-    color: #ffffff;
-    background-color: #4aaaa5;
-    width: 230px;
-    height:90px;
-    text-align: center;
-    line-height: 90px;
-}
-
-#self{
-    position: relative;
-    float: left;
-    margin-right: 25px;
-    width: 200px;
-    height: 200px;
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 812px) {
+    
+    
     .column, input[type=submit]{
         width: 100%;
         margin-top: 0;
     }
 
-    .container{
+    h1 {
+        font-size: 25px;
+    }
+
+    #logo {
+        font-size: 25px;
+        height: 45px;
+        line-height: 45px;
         width: 100%;
     }
 
-    .navContainer{
-        width: 100%;
+    nav {
+        float: none;
+        text-align: center;
+        clear: both;
     }
 
-    .grid-container img{
-        width: 85%;
-        margin-right: 0;
+    nav a{
+        margin: 0;
+        padding-top: 1px;
+        padding-bottom: 0;
     }
 
-    .grid-container{
-        width: 85%;
+    .self{
+        float: none;
+        width: 400px;
+        margin: 0 auto;
     }
 
-    .box-text{
-        width: 85%;
-    }
-    
-    .hclass{
-        width: 85%;
+    .main-section p {
+        clear: both;
     }
 
-    .aboutMe{
-        width: 85%;
+    .footer {
+        padding: 0;
+        height: 25px;
+        line-height: 25px;
     }
+}
 
+a:link, a:visited, a:hover, a:active{
+    text-decoration: none;
+    color:  #777777;
 }
 
 #preload-01 { background: url(../../assets/images/dontfeelgood.png) no-repeat -9999px -9999px;}
